# test_fft

./: .gitattributes  .gitignore  Pipfile  README.md  alembic.ini  array_chunk_reader.py  codeofconduct.txt  common.py  example_samples.py  kiwi_v5.py  notebook_with_derek.ipynb  ogden12rang_process_v3.py  ogden12rang_v1.py  ogden12rang_v2  process_from_file.py  reader  reader.py  reader_from_parallel_file.py  sample_processor.py  sample_reader.py  setup.cfg  test_fft.py
alembic/: env.py
alembic/versions/: d30a01ba8870_added_bpm_model.py  eeee662837fc_added_ct_model.py
data/: test_windows.fc32
docs/: chick_timer.md  db.md  freq_chart.md  valid BPM intervals.md
notebooks/: 3d plot.ipynb  beep_error.ipynb  channelised_baseline.ipynb  data_burst_tester.ipynb  fft_perf.ipynb  fft_perf_v2.ipynb  ig_example.ipynb  kiwi.ipynb  np_roll.ipynb  plot_filter.ipynb  plot_log.ipynb  polyphase_filter.ipynb  psd_airspy.ipynb  psd_find_beeps.ipynb  test_dict.ipynb  test_signal.ipynb  test_signal_fft.ipynb  testing performance.ipynb
recordings/12Feb2024/: 20240212-215130_Ch59.json  command line output.txt
src/kiwitracker/: Untitled-1.ipynb  __init__.py  __main__.py  airspyhf.py  beep_detection.ipynb  beep_state_machine.py  bsm.ipynb  chicktimer.py  chicktimerstatusdecoder.py  chicktimerv2.py  common.py  config.py  default_settings.json  derek_notebook2.ipynb  exceptions.py  fasttelemetry.py  fasttelemetrydecoder.py  fft_notebook.ipynb  freq_chart.txt  gps.py  gui.py  logging.py  my debug notebook.ipynb  (+7 more)
tests/: conftest.py  test_basics.py  test_sample_processor.py
(+5 files in other folders)
