[metadata]
name = KiwiTracker
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    requests
    gpsd-py3
    pyrtlsdr
    pyrtlsdrlib;platform_machine!='aarch64'

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    kiwitracker = kiwitracker:main
